FIX: collapse composer when edit links

--- a/assets/stylesheets/links-category.scss
+++ b/assets/stylesheets/links-category.scss
@@ -1,5 +1,10 @@
-#reply-control .wmd-controls.edit-links-category {
-  display: none;
+#reply-control.edit-link-category {
+  &.open {
+    height: 210px;
+  }
+  .wmd-controls {
+    display: none;
+  }
 }
 
 #reply-control input.featured-link-field {
